--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green_4">#009C41</color>
+    <color name="green_3">#0DAC50</color>
+    <color name="green_2">#1DBC60</color>
+    <color name="green_1">#8EFFC1</color>
 </resources>
