--- a/app/src/main/res/layout/layout_bottom_navigation.xml
+++ b/app/src/main/res/layout/layout_bottom_navigation.xml
@@ -14,16 +14,21 @@ android:layout_height="match_parent"
 
     >
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-        app:menu="@menu/bottom_navigation"
-        tools:ignore="MissingConstraints"
-        android:background="#31a44a"
-        />
+       <com.google.android.material.bottomnavigation.BottomNavigationView
+           android:id="@+id/bottom_navigation"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_gravity="bottom"
+
+
+           app:menu="@menu/bottom_navigation"
+           tools:ignore="MissingConstraints"
+
+           app:itemTextColor="@color/tab_item_foreground"
+           app:itemIconTint="@color/tab_item_foreground"
+           app:labelVisibilityMode="labeled"
+           />
+
 
 </LinearLayout>
 
