--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/bottom_navigation_home"
         android:icon="@drawable/ic_home_24"
@@ -11,13 +12,18 @@
         android:id="@+id/bottom_navigation_project"
         android:icon="@drawable/ic_project_24"
         android:title="@string/title_project"
-        android:checked="true"/>
+        android:checked="true"
 
-
-
+        />
     <item
         android:id="@+id/bottom_navigation_workplace"
         android:icon="@drawable/ic_workplace_24"
         android:title="@string/title_workplace"
         android:checked="true"/>
+    <item
+        android:id="@+id/bottom_navigation_account"
+        android:icon="@drawable/ic_person"
+        android:title="@string/bottom_nav_account"
+        android:checked="true"/>
+
 </menu>
