--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
 
     <color name="colorPrimary">#2a7ee6</color>
     <color name="colorPrimaryDark">#76a5df</color>
-    <color name="colorAccent">#ffff8800</color>
+    <color name="colorAccent">#CDDC39</color>
     <color name="zircon">#e0e6e4</color>
     <color name="background_color">#eeeeee</color>
 
