--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,16 +27,16 @@
 
 
         />
+
     <ImageView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
         android:id="@+id/SplashLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/circle_top"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/s"
         android:layout_marginTop="-40dp"
         android:layout_marginBottom="10dp"
-        android:layout_below="@+id/circle_top"
-        />
+        android:src="@drawable/s" />
 
 
 
