--- a/app/src/main/res/layout/layout_add_list_workspace.xml
+++ b/app/src/main/res/layout/layout_add_list_workspace.xml
@@ -64,7 +64,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                >
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
@@ -77,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
-
+                        android:id="@+id/test"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="SQD"
