--- a/app/src/main/res/layout/layout_bottom_nav_workspace.xml
+++ b/app/src/main/res/layout/layout_bottom_nav_workspace.xml
@@ -15,12 +15,12 @@ android:layout_height="match_parent"
     >
 
        <com.google.android.material.bottomnavigation.BottomNavigationView
-           android:id="@+id/bottom_navigation"
+           android:id="@+id/bottom_nav_workspace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
 
-           app:menu="@menu/bottom_navigation"
+           app:menu="@menu/bottom_navigation_workspace"
            tools:ignore="MissingConstraints"
 
            app:itemTextColor="@color/tab_item_foreground"
