--- a/app/src/main/res/menu/bottom_navigation_workspace.xml
+++ b/app/src/main/res/menu/bottom_navigation_workspace.xml
@@ -2,28 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/bottom_navigation_home"
+        android:id="@+id/bottom_nav_workspace_home"
         android:icon="@drawable/ic_home_24"
         android:checked="true"
         android:title="@string/title_home"
 
         />
     <item
-        android:id="@+id/bottom_navigation_project"
+        android:id="@+id/bottom_nav_workspace_project"
         android:icon="@drawable/ic_project_24"
-        android:title="@string/device"
+        android:title="@string/title_project"
         android:checked="true"
 
         />
     <item
-        android:id="@+id/bottom_navigation_workplace"
+        android:id="@+id/bottom_nav_workspace_workplace"
         android:icon="@drawable/ic_workplace_24"
-        android:title="@string/market"
+        android:title="@string/title_workplace"
         android:checked="true"/>
     <item
-        android:id="@+id/bottom_navigation_account"
-        android:icon="@drawable/ic_person"
-        android:title="@string/bottom_nav_account"
+        android:id="@+id/bottom_nav_workspace_add"
+        android:icon="@drawable/ic_bar"
+        android:title="@string/add"
         android:checked="true"/>
 
 </menu>
