--- a/app/src/main/res/layout/fragment_home_workspace.xml
+++ b/app/src/main/res/layout/fragment_home_workspace.xml
@@ -90,6 +90,7 @@
                                 />
                         </LinearLayout>
                         <LinearLayout
+                            android:id="@+id/statistic"
                             android:layout_width="80dp"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
