--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,7 +40,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
-
+                        android:id="@+id/fragment_home_userName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="SQD"
@@ -50,6 +50,7 @@
                         android:layout_marginBottom="5dp"
                         />
                     <TextView
+                        android:id="@+id/fragment_home_email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="sqd@gmail.com"
