Feature: Create features for resignation letters

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="zircon">#e0e6e4</color>
     <color name="background_color">#eeeeee</color>
 
+    <color name="black_gray">#555555</color>
 </resources>
