--- a/app/src/main/res/layout/activity_resignation_letter.xml
+++ b/app/src/main/res/layout/activity_resignation_letter.xml
@@ -58,15 +58,15 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/menuTimeLetter"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="366dp"
-        android:layout_height="66dp"
+        android:layout_width="373dp"
+        android:layout_height="62dp"
         android:layout_marginTop="252dp"
         android:hint="Chọn thời gian"
         android:textColorHint="@android:color/darker_gray"
         app:boxStrokeColor="@android:color/darker_gray"
         app:hintTextColor="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.222"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:placeholderTextColor="@android:color/darker_gray"
@@ -74,8 +74,8 @@
 
         <AutoCompleteTextView
             android:id="@+id/autoCompleteTextViewTimeLetter"
-            android:layout_width="358dp"
-            android:layout_height="53dp"
+            android:layout_width="359dp"
+            android:layout_height="52dp"
             android:layout_marginTop="64dp"
             android:inputType="none"
             android:textColorHint="@android:color/darker_gray"
@@ -106,24 +106,24 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/outlinedTextField"
+        android:id="@+id/outlinedTextFieldReason"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="390dp"
-        android:layout_height="234dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="402dp"
+        android:layout_height="213dp"
+        android:layout_marginBottom="72dp"
         android:hint="Nhập lý do"
         app:hintTextColor="@android:color/darker_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintHorizontal_bias="0.769"
         app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="361dp"
-            android:layout_height="200dp"
             android:id="@+id/textInputEditTextReasonLetter"
-            android:inputType="text|textMultiLine"
+            android:layout_width="375dp"
+            android:layout_height="192dp"
             android:gravity="top"
+            android:inputType="text|textMultiLine"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="380dp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -167,6 +167,20 @@
         app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonSubmitLetter"
+        android:layout_width="382dp"
+        android:layout_height="57dp"
+        android:backgroundTint="@color/green_3"
+        android:text="Gửi yêu cầu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.241"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField"
+        app:layout_constraintVertical_bias="0.562"
+        tools:ignore="UnknownId" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
