--- a/app/src/main/res/layout/activity_create_workspace.xml
+++ b/app/src/main/res/layout/activity_create_workspace.xml
@@ -4,10 +4,16 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".Create_workspace">
+tools:context=".Create_workspace"
 android:background="@color/background_color"
     >
-
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        />
     <ImageView
         android:id="@+id/circle_top"
         android:layout_width="wrap_content"
