--- a/app/src/main/res/layout/activity_resignation_letter.xml
+++ b/app/src/main/res/layout/activity_resignation_letter.xml
@@ -1,152 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResignationLetterActivity">
+    tools:context=".ResignationLetterActivity"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+    android:orientation="vertical"
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:orientation="horizontal"
+        android:background="@color/white"
 
-    <View
-        style="@style/Divider"
-        android:layout_marginTop="100dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        >
+                <ImageView
+                    android:id="@+id/btnBackPressed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_arrow_left_30"
+                    android:layout_marginRight="10dp"
+                    android:padding="3dp"
+                    android:layout_gravity="center_vertical"
+                    />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/menuTypeLetters"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="366dp"
-        android:layout_height="66dp"
-        android:layout_marginTop="140dp"
-        android:hint="Chọn loại đơn"
-        android:textColorHint="@android:color/darker_gray"
-        app:boxStrokeColor="@android:color/darker_gray"
-        app:hintTextColor="@android:color/darker_gray"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.355"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:placeholderTextColor="@android:color/darker_gray"
-        tools:ignore="MissingConstraints">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Báo nghỉ / đi muộn"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold"
 
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextViewTypeLetter"
-            android:layout_width="358dp"
-            android:layout_height="53dp"
-            android:layout_marginTop="64dp"
-            android:inputType="none"
-            android:textColorHint="@android:color/darker_gray"
-            app:boxStrokeColor="@android:color/darker_gray" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/textViewTypeLetter"
-        android:layout_width="82dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="116dp"
-        android:text="Loại đơn"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.048"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/menuTimeLetter"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="366dp"
-        android:layout_height="66dp"
-        android:layout_marginTop="252dp"
-        android:hint="Chọn thời gian"
-        android:textColorHint="@android:color/darker_gray"
-        app:boxStrokeColor="@android:color/darker_gray"
-        app:hintTextColor="@android:color/darker_gray"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.222"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:placeholderTextColor="@android:color/darker_gray"
-        tools:ignore="MissingConstraints">
-
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextViewTimeLetter"
-            android:layout_width="358dp"
-            android:layout_height="53dp"
-            android:layout_marginTop="64dp"
-            android:inputType="none"
-            android:textColorHint="@android:color/darker_gray"
-            app:boxStrokeColor="@android:color/darker_gray" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/textViewTimeLetter"
-        android:layout_width="82dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="228dp"
-        android:text="Thời gian áp dụng đơn"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.048"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/view"
-        style="@style/Divider"
-        android:layout_marginBottom="320dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/outlinedTextField"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="390dp"
-        android:layout_height="234dp"
-        android:layout_marginBottom="40dp"
-        android:hint="Nhập lý do"
-        app:hintTextColor="@android:color/darker_gray"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="361dp"
-            android:layout_height="200dp"
-            android:id="@+id/textInputEditTextReasonLetter"
-            android:inputType="text|textMultiLine"
-            android:gravity="top"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="380dp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/textViewReasonLetter"
-        android:layout_width="82dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="19dp"
-        android:text="Lý do"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.048"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view" />
-
+            />
+    </LinearLayout>
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="70dp"
-        android:layout_height="21dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="QUẢN LÝ"
         android:textColor="@color/green_4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -156,17 +51,128 @@
 
     <TextView
         android:id="@+id/textViewNameLeader"
-        android:layout_width="225dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="56dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="TextView"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
+        />
+    <View
+        style="@style/Divider"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textViewTypeLetter"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:text="Loại đơn"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/menuTypeLetters"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:hint="Chọn loại đơn"
+        android:textColorHint="@android:color/darker_gray"
+        app:boxStrokeColor="@android:color/darker_gray"
+        app:hintTextColor="@android:color/darker_gray"
+        app:placeholderTextColor="@android:color/darker_gray"
+        tools:ignore="MissingConstraints">
+
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextViewTypeLetter"
+            android:layout_width="match_parent"
+            android:layout_height="53dp"
+            android:inputType="none"
+            android:textColorHint="@android:color/darker_gray"
+            app:boxStrokeColor="@android:color/darker_gray" />
+    </com.google.android.material.textfield.TextInputLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textViewTimeLetter"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:layout_marginTop="10dp"
+        android:text="Thời gian áp dụng đơn"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/menuTimeLetter"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:hint="Chọn thời gian"
+        android:textColorHint="@android:color/darker_gray"
+        app:boxStrokeColor="@android:color/darker_gray"
+        app:hintTextColor="@android:color/darker_gray"
+        app:placeholderTextColor="@android:color/darker_gray"
+        tools:ignore="MissingConstraints">
+
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextViewTimeLetter"
+            android:layout_width="match_parent"
+            android:layout_height="53dp"
+            android:inputType="none"
+            android:textColorHint="@android:color/darker_gray"
+            app:boxStrokeColor="@android:color/darker_gray" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+
+    <View
+        android:id="@+id/view"
+        style="@style/Divider"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+    <TextView
+        android:id="@+id/textViewReasonLetter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:text="Lý do"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/outlinedTextField"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="234dp"
+        android:hint="Nhập lý do"
+        app:hintTextColor="@android:color/darker_gray"
+       >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/textInputEditTextReasonLetter"
+            android:inputType="text|textMultiLine"
+            android:gravity="top"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="380dp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+   <Button
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:text="Gửi yêu cầu"/>
+
+
+
+</LinearLayout>
