--- a/app/src/main/res/layout/fragment_home_workspace.xml
+++ b/app/src/main/res/layout/fragment_home_workspace.xml
@@ -11,14 +11,15 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-127dp">
+       >
 
     >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="40dp"
+            >
             <include layout="@layout/header_home_workspace"/>
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -48,6 +49,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
                         <LinearLayout
+                            android:id="@+id/add_employee"
                             android:layout_width="80dp"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
@@ -157,7 +159,7 @@
                 >
                 <androidx.cardview.widget.CardView
                     android:id="@+id/individual"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="120dp"
                     android:layout_row="0"
                     android:layout_column="0"
@@ -202,7 +204,7 @@
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/Staff"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="120dp"
                     android:layout_row="0"
                     android:layout_column="1"
@@ -246,7 +248,7 @@
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/workSchedule"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="120dp"
                     android:layout_row="1"
                     android:layout_column="0"
@@ -292,7 +294,7 @@
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/workspaceCalender"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="120dp"
                     android:layout_row="1"
                     android:layout_column="1"
@@ -347,6 +349,7 @@
                     app:cardElevation="5dp"
                     >
                     <LinearLayout
+                        android:id="@+id/resignnation_letter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
@@ -381,7 +384,7 @@
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
                     android:id="@+id/project_workspace"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="120dp"
                     android:layout_row="2"
                     android:layout_column="1"
