--- a/app/src/main/res/layout/workspace_item.xml
+++ b/app/src/main/res/layout/workspace_item.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_workspace"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:layout_marginBottom="10dp"
     >
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/white"
-        android:paddingBottom="8dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_height="65dp"
+        android:layout_gravity="center_horizontal"
+        app:cardCornerRadius="10dp"
         >
         <LinearLayout
             android:layout_width="wrap_content"
@@ -22,13 +26,13 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                >
                 <ImageView
-                    android:layout_width="30dp"
+                    android:layout_width="40dp"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_person_pin_30"
-                    android:layout_marginRight="10dp"
-
+                    android:src="@drawable/ic_person_pin_14"
+                    android:layout_marginRight="8dp"
                     />
 
                 <LinearLayout
@@ -36,18 +40,20 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
-                        android:id="@+id/tv_name_workspace"
+                        android:id="@+id/tv_nameWorkspace"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="SQD"
                         android:textSize="22sp"
                         android:textStyle="bold"
                         android:textColor="@color/black"
                         android:layout_marginBottom="5dp"
                         />
                     <TextView
-                        android:id="@+id/tv_email_workspace"
+                        android:id="@+id/tv_emailWorkspace"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="sqd@gmail.com"
                         android:textColor="@color/black"
                         android:textSize="13sp"
                         android:layout_marginBottom="5dp"
@@ -55,30 +61,5 @@
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_weight="0.04"
-
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_doorbell_24"
-                android:padding="12dp"
-                android:layout_gravity="end"
-                />
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_person"
-                android:padding="12dp"
-                android:layout_gravity="right"
-                />
-        </LinearLayout>
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
