--- a/app/src/main/res/layout/activity_add_employees.xml
+++ b/app/src/main/res/layout/activity_add_employees.xml
@@ -7,13 +7,20 @@ android:layout_height="match_parent"
 tools:context=".AddEmployees"
 android:background="@color/background_color"
     >
-<ImageView
-    android:id="@+id/circle_top"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true"
-    android:src="@drawable/circle" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        />
+    <ImageView
+        android:id="@+id/circle_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/circle" />
     <ImageView
         android:id="@+id/back_workspace"
         android:layout_width="40dp"
@@ -39,19 +46,6 @@ android:background="@color/background_color"
             android:text="Mời nhân viên"
             android:textColor="@color/black"
             android:textSize="45sp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvLob"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:fontFamily="@font/poppinsmedium"
-            android:gravity="center"
-            android:text="Thông tin nhân viên"
-            android:textColor="@color/black"
-            android:textSize="25sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -72,47 +66,21 @@ android:background="@color/background_color"
         android:paddingBottom="30dp">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/nameError"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:startIconDrawable="@drawable/ic_person"
-            app:boxBackgroundColor="?attr/colorOnPrimary"
-            app:endIconMode="custom"
-            app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
-            app:startIconTint="#6200EE">
-            >
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/poppinsregular"
-                android:hint="Họ tên nhân viên"
-                android:inputType="textNoSuggestions"
-                android:maxLines="1"
-                android:paddingStart="5dp"
-                android:singleLine="true" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailError"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="15dp"
             app:startIconDrawable="@drawable/ic_email"
             app:boxBackgroundColor="?attr/colorOnPrimary"
             app:endIconMode="custom"
             app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
             app:startIconTint="#6200EE">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                 android:id="@+id/email"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/poppinsregular"
                 android:hint="Email nhân viên"
