--- a/app/src/main/res/layout/activity_workspace.xml
+++ b/app/src/main/res/layout/activity_workspace.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/view_pager2_workspace"
-            android:layout_above="@+id/bottom_navigation"
+            android:layout_above="@+id/bottom_nav_workspace"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
         <include layout="@layout/layout_bottom_nav_workspace"/>
