--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -64,6 +64,7 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/call_notification"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.3"
