--- a/app/src/main/res/layout/fragment_home_workspace.xml
+++ b/app/src/main/res/layout/fragment_home_workspace.xml
@@ -22,6 +22,7 @@
             >
             <include layout="@layout/header_home_workspace"/>
             <androidx.cardview.widget.CardView
+                android:id="@+id/cv_administrator"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_marginLeft="20dp"
@@ -71,6 +72,7 @@
                                 />
                         </LinearLayout>
                         <LinearLayout
+                            android:id="@+id/list_employee"
                             android:layout_width="80dp"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
@@ -378,6 +380,50 @@
 
                             android:textSize="15sp"
 
+                            />
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/browse_app"
+                    android:layout_width="wrap_content"
+                    android:layout_height="120dp"
+                    android:layout_row="2"
+                    android:layout_column="0"
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_margin="5dp"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="5dp"
+                    >
+                    <LinearLayout
+                        android:id="@+id/approve_leave"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="8dp"
+                        >
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginBottom="15dp"
+                            android:src="@drawable/ic_check_circle_24"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Duyệt đơn"
+                            android:textColor="@color/black"
+                            android:textStyle="bold"
+                            android:textSize="18sp"
+                            android:layout_marginBottom="3dp"
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Danh sách báo nghỉ"
+                            android:textColor="@color/black"
+                            android:textSize="15sp"
                             />
                     </LinearLayout>
 
