--- a/app/src/main/res/layout/activity_statistic_by_day.xml
+++ b/app/src/main/res/layout/activity_statistic_by_day.xml
@@ -53,6 +53,7 @@
         android:textStyle="bold"
     />
     <androidx.cardview.widget.CardView
+        android:id="@+id/workOnTime"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginLeft="15dp"
@@ -77,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
-                android:layout_weight="0.7"
+                android:layout_weight="0.8"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -89,10 +90,11 @@
 
                     />
                 <TextView
+                    android:id="@+id/tv_workOnTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Có 0 người đi làm đúng giờ"
-                    android:textSize="15sp"
+                    android:textSize="14sp"
                     android:textColor="@color/green_4"
                     />
             </LinearLayout>
@@ -107,6 +109,7 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
+        android:id="@+id/lateForWork"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginLeft="15dp"
@@ -131,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
-                android:layout_weight="0.7"
+                android:layout_weight="0.8"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -143,23 +146,26 @@
 
                     />
                 <TextView
+                    android:id="@+id/tv_lateForWork"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Có 0 người đi làm muộn"
-                    android:textSize="15sp"
+                    android:textSize="14sp"
                     android:textColor="@color/green_4"
                     />
             </LinearLayout>
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_arrow_right"
                 android:padding="5dp"
-                android:layout_marginLeft="110dp"
+                android:src="@drawable/ic_arrow_right"
+
                 />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
+        android:id="@+id/offWork"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginLeft="15dp"
@@ -184,7 +190,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
-                android:layout_weight="0.7"
+                android:layout_weight="0.8"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -196,19 +202,21 @@
 
                     />
                 <TextView
+                    android:id="@+id/tv_offWork"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Có 0 người chưa checkin"
-                    android:textSize="15sp"
+                    android:textSize="14sp"
                     android:textColor="@color/green_4"
                     />
             </LinearLayout>
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_arrow_right"
                 android:padding="5dp"
-                android:layout_marginLeft="110dp"
+                android:src="@drawable/ic_arrow_right"
+
                 />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
