--- a/app/src/main/res/layout/fragment_home_workspace.xml
+++ b/app/src/main/res/layout/fragment_home_workspace.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background_color"
-    android:orientation="vertical"
     tools:context=".fragment.HomeWorkspaceFragment">
 
+<LinearLayout
+    android:id="@+id/content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-       >
+        >
 
-    >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -21,6 +24,46 @@
             android:paddingBottom="40dp"
             >
             <include layout="@layout/header_home_workspace"/>
+            <LinearLayout
+                android:id="@+id/no_checkin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/orange"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:visibility="gone"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_warning_24"
+                    android:layout_marginRight="10dp"
+
+                    />
+
+                <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="30dp"
+                    android:textSize="16sp"
+                    android:text="@string/no_attendance"/>
+
+
+                <TextView
+                    android:id="@+id/btn_checkin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="15sp"
+                    android:padding="3dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/custom_text_view"
+                    android:text="Checkin"/>
+            </LinearLayout>
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_administrator"
                 android:layout_width="match_parent"
@@ -520,6 +563,14 @@
 
         </LinearLayout>
     </ScrollView>
-
-
 </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="visible"
+        />
+
+</RelativeLayout>
