improved some feature

--- a/app/src/main/res/layout/fragment_home_workspace.xml
+++ b/app/src/main/res/layout/fragment_home_workspace.xml
@@ -7,7 +7,7 @@
     android:background="@color/background_color"
     tools:context=".fragment.HomeWorkspaceFragment">
 
-<LinearLayout
+    <LinearLayout
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -564,13 +564,12 @@
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
-
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="visible"
+        android:visibility="gone"
         />
 
 </RelativeLayout>
