--- a/app/src/main/res/layout/header_home_workspace.xml
+++ b/app/src/main/res/layout/header_home_workspace.xml
@@ -72,10 +72,11 @@
                 android:layout_gravity="end"
                 />
             <ImageView
+                android:id="@+id/btnBackPressed"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_person"
+                android:src="@drawable/ic_home_24"
                 android:padding="12dp"
                 android:layout_gravity="right"
                 />
